# Praxis

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  check_click.cjs  check_db.py  check_db2.py  check_overlap.cjs  check_rects.cjs  check_rects2.cjs  check_workspace.py  click_close.ps1  click_minimize.ps1  click_minimize2.ps1  extract_logo.py  index.html  make_square.py  package-lock.json  package.json  puppeteer_send.cjs  puppeteer_test.cjs  puppeteer_test_exe.cjs  puppeteer_test_files.cjs  puppeteer_test_log.cjs  puppeteer_test_maximize.cjs  set_workspace.py  take_screenshots.ps1  wipe_keys.py
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  security_issue.md
.github/workflows/: ci.yml  release.yml
docs/: API.md  ARCHITECTURE.md  BACKEND.md  DATABASE.md  EXECUTION_FLOW.md  FAQ.md  FRONTEND.md  IMPLEMENTATION_STATUS.md  LLM_ROUTER.md  PERMISSION_ENGINE.md  ROADMAP.md  SAFETY_RATIONALE.md  WORKSPACE.md
docs/adr/: 001-trusttier-architecture.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  wipe.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  e2e_tests.rs  error.rs  keychain.rs  lib.rs  workspace.rs
src-tauri/src/llm/: mod.rs  openrouter.rs
src-tauri/src/permission/: mod.rs  policy.rs
src/components/: AnimatedNumber.tsx  AuditLog.tsx  CommandPalette.tsx  FileBrowser.tsx  ModelStatus.tsx  Models.tsx  Settings.tsx
src/core/: executor.ts  index.ts  planner.ts  types.ts  (+1 more)
(+6 files in other folders)
